# LearnRayTracing

./: README.md
nextweek/: .gitignore  CMakeLists.txt  README.md  run.bat
nextweek/config/: config.hpp  project_path.hpp.in
nextweek/include/: BVH.hpp  Color.hpp  PPMImage.hpp  algebra.hpp  camera.hpp  global.hpp  hittable.hpp  material.hpp  noise.hpp  ray.hpp  texture.hpp
nextweek/src/: BVH.cpp  PPMImage.cpp  RenderThreadPool.cpp  hittable.cpp  main.cpp
nextweek/static/: config.data  cornell.data  image.data  light.data  noise.data  texture_config.data
nextweek/tools/: Color.hpp  PPMImage.hpp  RenderThreadPool.hpp  algebra.hpp
oneweek/: .gitignore  CMakeLists.txt
oneweek/include/: PPMImage.hpp  algebra.hpp  camera.hpp  global.hpp  hittable.hpp  material.hpp  ray.hpp  sphere.hpp
oneweek/src/: main.cpp
